# todo-app

./: docker-compose.yaml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 20220925122417_first.sql
backend/src/: main.rs  state.rs
backend/src/api/: mod.rs
backend/src/api/tasks/: delete_tasks.rs  get_task.rs  get_tasks.rs  mod.rs  patch_tasks.rs  post_tasks.rs
backend/src/model/: mod.rs  task.rs
client/: package.json  pnpm-lock.yaml
frontend/: .dockerignore  .eslintignore  .gitignore  .prettierignore  Dockerfile  package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json
frontend/src/: app.css
frontend/src/lib/openapi/: runtime.ts
frontend/src/lib/openapi/.openapi-generator/: FILES
frontend/src/lib/openapi/apis/: DefaultApi.ts
frontend/src/lib/openapi/models/: PatchTask.ts  PostTasks.ts  Task.ts  index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
openapi/: .gitignore  openapi.yaml
server/: Cargo.toml
server/src/: main.rs
