[package]
name = "todo-app-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
anyhow = "1"
actix-cors = "0.6"
log = "0.4"
env_logger = "0.9"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.sqlx]
version = "0.6"
features = [
    "runtime-tokio-native-tls",
    "sqlite"
]

[dependencies.serde]
version = "1"
features = ["derive"]
